--- a/package.json
+++ b/package.json
@@ -18,35 +18,47 @@
         "@angular/platform-browser": "^7.2.2",
         "@angular/platform-browser-dynamic": "^7.2.2",
         "@angular/router": "^7.2.2",
+        "@ionic-native/android-permissions": "^5.6.0",
+        "@ionic-native/background-geolocation": "^5.5.1",
         "@ionic-native/camera": "^5.0.0",
-        "@ionic-native/core": "^5.0.0",
+        "@ionic-native/core": "^5.5.1",
+        "@ionic-native/device-motion": "^5.5.1",
         "@ionic-native/file": "^5.0.0",
         "@ionic-native/file-opener": "^5.0.0-beta.21",
         "@ionic-native/file-path": "^5.0.0",
+        "@ionic-native/geolocation": "^5.6.0",
         "@ionic-native/image-picker": "^5.0.0",
         "@ionic-native/ionic-webview": "^5.0.0",
+        "@ionic-native/location-accuracy": "^5.6.0",
+        "@ionic-native/sms": "^5.6.0",
         "@ionic-native/splash-screen": "5.0.0",
         "@ionic-native/status-bar": "5.0.0",
         "@ionic-native/transfer": "^3.14.0",
         "@ionic/angular": "4.0.2",
         "@ionic/pro": "2.0.3",
         "@ionic/storage": "^2.2.0",
+        "@mauron85/cordova-plugin-background-geolocation": "3.0.3",
         "@types/dom-to-image": "^2.6.0",
         "@types/jspdf": "^1.3.0",
         "cordova-android": "8.0.0",
         "cordova-ios": "4.5.5",
+        "cordova-plugin-android-permissions": "1.0.0",
         "cordova-plugin-camera": "4.0.3",
         "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-device-motion": "2.0.1",
         "cordova-plugin-file": "6.0.1",
         "cordova-plugin-file-opener2": "2.2.0",
         "cordova-plugin-file-transfer": "1.7.1",
         "cordova-plugin-filepath": "1.5.1",
+        "cordova-plugin-geolocation": "4.0.1",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
         "cordova-plugin-ionic-webview": "^2.4.0",
+        "cordova-plugin-request-location-accuracy": "2.2.3",
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-telerik-imagepicker": "^2.2.4",
         "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-sms-plugin": "1.0.0",
         "cordova-sqlite-storage": "3.2.0",
         "core-js": "^2.5.4",
         "dom-to-image": "^2.6.0",
@@ -90,7 +102,20 @@
             "cordova-plugin-camera": {},
             "cordova-plugin-file-transfer": {},
             "cordova-plugin-filepath": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-device-motion": {},
+            "cordova-plugin-mauron85-background-geolocation": {
+                "GOOGLE_PLAY_SERVICES_VERSION": "11+",
+                "ANDROID_SUPPORT_LIBRARY_VERSION": "26+",
+                "ACCOUNT_NAME": "@string/app_name",
+                "ACCOUNT_LABEL": "@string/app_name",
+                "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+                "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+            },
+            "cordova-plugin-android-permissions": {},
+            "cordova-plugin-request-location-accuracy": {},
+            "cordova-sms-plugin": {}
         },
         "platforms": [
             "ios",
